# xo

./: .gitignore  README.md  llm.txt  package.json
content/: index.md
content/_partials/: newsletter.md
content/blog/: first-post.md
layouts/: blog.html  default.html
src/: bun.build.ts  config.ts  deps.ts  dev.ts  xo.ts
xo-c/: CMakeLists.txt  README.md
xo-c/include/: build.h  markdown.h  server.h  template.h  utils.h  watcher.h  xo.h
xo-c/src/: CMakeLists.txt  build.c  main.c  markdown.c  server.c  template.c  utils.c  watcher.c
